--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
- 
+  <base href="/">
+
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="AFKO Pivot Irrigation System Controller">
@@ -34,7 +35,7 @@
   <script>
     // The value below is injected by flutter build, do not touch.
 
-    var serviceWorkerVersion = '3399952238';
+    var serviceWorkerVersion = '3877843905';
   </script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDaWxzVmaXwe2CJmjOqqBtwNkQN7oD-zA"></script>
   <!-- This script adds the flutter initialization JS code -->
